# Forecasting-Tornadoes

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  _typos.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: blank.md  general_issue.md  long_form.md
.github/actions/pre-commit/: action.yaml
data/: params_A.toml
data/clean/: cleaned_NOAA_SPC.csv
data/raw/: 2019_April_P.txt  2019_August_P.txt  2019_December_P.txt  2019_February_P.txt  2019_January_P.txt  2019_July_P.txt  2019_June_P.txt  2019_March_P.txt  2019_May_P.txt  2019_November_P.txt  2019_October_P.txt  2019_September_P.txt  2020_April_P.txt  2020_August_P.txt  2020_December_P.txt  2020_February_P.txt  2020_January_P.txt  2020_July_P.txt  2020_June_P.txt  2020_March_P.txt  2020_May_P.txt  2020_November_P.txt  2020_October_P.txt  2020_September_P.txt  2021_April_P.txt  2021_August_P.txt  2021_December_P.txt  2021_February_P.txt  2021_January_P.txt  2021_July_P.txt  2021_June_P.txt  2021_March_P.txt  2021_May_P.txt  2021_November_P.txt  2021_October_P.txt  2021_September_P.txt  2022_April_P.txt  2022_August_P.txt  2022_December_P.txt  2022_February_P.txt  (+23 more)
modelA/docs/source/: model.md  references.bib
modelA/src/: modelA.py  run.py
model_E414_01/: params.toml
model_E414_01/docs/: Makefile
model_E414_01/docs/source/: metadata.yml  model.md  references.bib
model_E414_01/src/: model.py  run.py  sens.py
model_LA_01/docs/: docs.md  model.md
model_LA_01/src/: model.py  run.py
models/model_E414_01/docs/source/: metadata.yml  model.md
models/model_E414_01/src/: model.py  run.py
models/model_LA_01/src/: model.py
utils/: config.py  data.py  inf.py  save.py  sens.py  transform.py  vis.py
