[tool.poetry]
name = "forecasting-tornadoes"
version = "0.1.0"
description = "The authors' attempts at forecasting and modelling tornados in the US."
authors = ["AFg6K7h4fhy2 <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
polars = "^0.20.22"
numpyro = "^0.14.0"
toml = "^0.10.2"
arviz = "^0.18.0"
matplotlib = "^3.8.4"
flax = "^0.8.5"

[tool.numpydoc_validation]
checks = [
    "GL03", # Double line break found
    "GL06", # Found unknown section
    "GL07", # Sections are in the wrong order
    "GL08", # The object does not have a docstring
    "GL10", # reST directives must be followed by two colons
    "SS01", # No summary found
    "SS02", # Summary does not start with a capital letter
    "SS03", # Summary does not end with a period
    "PR01", # Parameters not documented
    "PR02", # Unknown parameters
    "PR03", # Wrong parameters order
    "PR04", # Parameter has no type
    "PR07", # Parameter  has no description
    "PR08", # Parameter description should start with a capital letter
    "PR09", # Parameter description should finish with period
    "PR10", # Parameter requires a space before the colon
    "RT01", # No Returns section found
    "RT03", # Return value has no description
    "RT04", # Return value description should start with a capital letter
    "RT05", # Return value description should finish with period
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\.__call__$',
    '\.__init__$',
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
